# KallGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bc.list
SVF-2.5/: CMakeLists.txt
SVF-2.5/lib/FastCluster/: fastcluster_dm.cpp.inc
SVF-2.5/lib/MemoryModel/: LocationSet.cpp  SymbolTableInfo.cpp
SVF-2.5/lib/SVF-FE/: SVFIRBuilder.cpp
src/: CMakeLists.txt  KallGraph.cpp  irgen.sh
src/include/: KallGraphAlgo.hpp  Util.hpp
src/lib/: KallGraphAlgo.cpp  Util.cpp
src/sample_input/: allyes_bc.list  bc.list
src/sample_output/20250528_140355/: callgraph1  callgraph2  log
